# erbridge

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  docker-compose.yml  justfile  traefik.yml
backend/: .env.example  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.test.yml
backend/.cargo/: config.toml
backend/.sqlx/: query-0071b1a882830683dcab0f00f214cc38111eb9fac7c9fd249db3c4b1cddc94a6.json  query-0072e4d07f2520bf321fdd7c6086ad4088c61f481cef286d443f48e18de7ff58.json  query-00804571d1f1cf4387ee86f1a505888c3e4584b2039385862e5830c8147880bc.json  query-0092b94aa7559b385a44c460deeebd433d3ef63a7cd19a9549506f1ec1085815.json  query-06089b51d72d5b0a8b31916e9ca80d5019aca2c81696030fff96471e37726576.json  query-064e4e271179df6a602f932c673ac8ec3ffc0727809482578b13ce2995b7534c.json  query-07d9dc891d2d8dad4124fe539dd0eab7ed1a1e2392bb46548b86df4df6bd14ac.json  query-0927f178e4cba5bafd4b728b53619d85e79bb7d3480e2ef9afcf04d39988dfa0.json  query-0ac9c8016de331a26174d7c9958fa0d064efd638162b50bddd165dbe9a3cc34b.json  query-0bfc45af88592862c4800c1c123ccf4323a7450bfec1a0f8ee0e52f45c4721db.json  query-0d23a0689ae5adf11b9cbcd1f785e7deb317af8740a7ee0c8974d2242ea25325.json  query-0eb6047d59be71a1f6d0ac8f289a3ad63a9aaabb59d094751d1d3c11b6619834.json  query-104e895f1a2e9fde4b3beb35e8e927cc1491718d2d850d4b0002c00b62f87c40.json  query-1051477c810a80a0d0bc63f7541635f5e84dd89be39e8bbd255ac6113cffe9b0.json  query-138628dab2eb1f01b705d9cfaab647551e6afafade503af8b77d76913d03b6a3.json  query-1392e1955b2126e4ac0f31bce8d8d3158317ee9592efc20fbc3b2a760418923c.json  query-1394b381b23a4afbae625a34dda60209fa220c6a89bd9069f297e3b043ba33da.json  query-13b673068b258c42e6e7f47a2b1f330fdeaac93d8ab642c639b24811d1b78402.json  query-176ecedc98bb3a14527418f04858a97a603535584bc9d081ed79e75fba349850.json  query-18ad3a6abcbe52135f85fada26566a1c332eee91588340cc0156b885b0e733e3.json  query-1a05a70fa7954d653fc6f7a229e1c70c01ce509cffe44729c8621ef54e40ebcc.json  query-1b8baa730c01d33217f352d0bb3c2755fe7f9617ff84c1bca9b0c7e0a2475012.json  query-1b951319607489e7f28528aabc637dd3e96b72d7e1f927e4c76a6b8fbaa87efa.json  query-1bc4937edf9cff44856afecd3601b5cd39e346c18fb5713398218e40bef022a4.json  query-1bdb9ca6281a9f68878bcb0d2bca20abd85426b9af7bb510daf5faff349624f0.json  query-1c82751b01e44e67916901add824e5f098709d7e66f96a0b51266d91864e03b7.json  query-1e9415676557a43ac45f9dfcb349c1d032de6efe2a458c355d5fc8bfb8e481ae.json  query-1fdb83693567b8bb551c95d4328d15ee2cad364e66004c31f668327b370d3423.json  query-2102dbb8d82dfd19886b0d9d791488e151ff15e19130b7464b9694bb1276cb70.json  query-221a1903ab14589381e5b9a17e324f424f13eab0c7683bc2d663751abc657fc6.json  query-248fe0d68a37c0d3f53b194078b6ec5bf006d948b8e97aae2b3edd57e5bb74a6.json  query-26b8a93c2c6c3f3126d511f30a211bf7dc539f4735af78b1cafb8cb16adbbe9c.json  query-2c07fbbb8d13002066af34de529035973047180f620be42cb3bc68a63c215f8c.json  query-2c1c46baca4e52f972a23a2297a3e142ce680f57c68eb212845585bfaaa4d16f.json  query-2e2f218f933be516dd0d02ae46ba71a028185c4136ae93f32212f91f4fd8f739.json  query-2fcbcf5ecbaa8c4024a3bd4d9df713e650ba126fbddfbcb23ea872d576442fbc.json  query-318668b15246e31147cb6716a86d1c4677c902b613b301d7bffdc004c0d3544f.json  query-324ccf2961fa41d45c67f024c3ff3cdb7b481dda5d60e56ede5b440da9859425.json  query-32a9258c807953db32e842032e5d1c1b87cde09f5ea807ff5c8902bb6140ae16.json  query-32c2c5d9818ea2f727cb170392e6be4f93a447f1dcfb2c5a1f705911763c925e.json  (+165 more)
backend/migrations/: 00000000000001_create_account_eve_character_and_api_key.sql  00000000000002_create_session.sql  00000000000003_add_account_preferences.sql  00000000000004_api_key_unique_name_per_scope.sql  00000000000005_create_audit_log.sql  00000000000006_add_audit_log_target_columns.sql  00000000000007_create_blocked_eve_character.sql  00000000000008_add_owner_hash_and_token_status.sql  00000000000009_create_map_and_acl.sql  00000000000010_acl_member_unique.sql  00000000000011_drop_session_vestigial_columns.sql  00000000000012_account_last_known_main_and_orphaned_status.sql  00000000000013_create_eve_system_catalog.sql
backend/scripts/: test.sh
backend/src/: api_key.rs  app_state.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  openapi.rs  permissions.rs  response.rs  session.rs
backend/src/audit/: mod.rs
backend/src/db/: accounts.rs  acl.rs  acl_member.rs  api_keys.rs  blocks.rs  characters.rs  eve_system.rs  map.rs  map_acl.rs  mod.rs  preferences.rs  sessions.rs  test_helpers.rs
backend/src/dto/: account.rs  acl.rs  admin.rs  entity.rs  health.rs  keys.rs  map.rs  mod.rs  preferences.rs
backend/src/esi/: eve_scout.rs  jwks.rs  jwt.rs  mod.rs  public_info.rs  rate_limit.rs  search.rs  test_support.rs  token.rs
backend/src/handlers/: api_key.rs  auth.rs  cookie.rs  crypto.rs  health.rs  (+2 more)
backend/tests/: admin.rs  api_keys.rs  audit_log.rs  auth.rs  blocks.rs  health.rs  layering.rs  maps_acls.rs  me.rs  openapi_strict.rs  preferences.rs  rate_limit.rs  sessions.rs
(+505 files in other folders)
