[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
aes-gcm = "0.10"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
hex = "0.4"
urlencoding = "2"
base64 = "0.22"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
reqwest-middleware = "0.4"
reqwest-tracing = "0.5"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
jsonschema = "0.17"
